# uvp

./: .gitignore  Cargo.toml  README.md  umc.toml.sample
docker/: Dockerfile
src/: data.rs  feeds.rs  main.rs  mpv.rs  tui.rs
uvp-client/: Cargo.toml  uvp.toml.sample
uvp-client/src/: main.rs  mpv.rs  tui.rs
uvp-server/: Cargo.toml
uvp-server/src/: main.rs
uvp-state/: Cargo.toml
uvp-state/src/: data.rs  feeds.rs  lib.rs
