[package]
name = "umc"
version = "0.1.0"
authors = ["ftilde <ftilde@protonmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10"
tokio = "0.2.6"
futures = "0.3.1"
structopt = "0.3"
rss = "1.7"
atom_syndication = "0.6"
derive_more = "0.14"
rusqlite = "0.21"
dirs = "2"
chrono = "0.4"
mpvipc = "1.1.8"
tempfile = "3.1"
signal-hook = "0.1"
#unsegen = "0.2"
unsegen = { path = "../unsegen" }
