[package]
name = "uvp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.9.0"
reqwest = { version = "0.10", features=["blocking"] }
serde = { version = "1.0.217", features=["derive"] }
tokio = { version = "1.43.0", features=["full"] }
uvp-state = { path = "../uvp-state" }
